--- a/guides/advanced_testing_patterns/parameterized_tests.mdx
+++ b/guides/advanced_testing_patterns/parameterized_tests.mdx
@@ -1,350 +1,382 @@
 ---
-title: "Parameterized and Type-Parameterized Tests"
-description: "Shows how to write tests that run over multiple data values or types, maximizing code coverage efficiently. Includes practical examples and tips for designing reusable test cases."
+title: "Parameterization: Value- and Type-Parameterized Tests"
+description: "Set up and run tests against multiple input values and types without duplicating code. This step-by-step guide covers defining, instantiating, and understanding both value- and type-parameterized test patterns for reusable, scalable test coverage."
 ---
 
-# Parameterized and Type-Parameterized Tests
+# Parameterization: Value- and Type-Parameterized Tests
 
-GoogleTest provides powerful mechanisms to write tests that run over multiple data values or types, enabling you to maximize test coverage with minimal code duplication. This page guides you through writing value-parameterized tests and type-parameterized tests, showing practical examples and design principles for reusable, data-driven test cases.
+## Overview
 
----
-
-## 1. Workflow Overview
-
-### Purpose
-This guide helps you write tests that are executed multiple times using different data input values or type parameters, enabling broad and efficient coverage of different scenarios without redundant code.
+This guide walks you through effectively setting up and running tests against multiple input values and types without duplicating your code. You will learn how to define, instantiate, and leverage both **value-parameterized** and **type-parameterized** test patterns provided by GoogleTest to build reusable, maintainable, and scalable test suites.
 
 ### Prerequisites
-- Familiarity with writing basic GoogleTest tests using `TEST` and `TEST_F`.
-- Your test project is configured with GoogleTest and includes `<gtest/gtest.h>`.
-- Understanding of C++ templates and basic class inheritance.
 
-### Expected Outcome
-You will be able to:
-- Define value-parameterized tests that run the same test logic with varying input data.
-- Use type-parameterized tests to run the same tests across various C++ types.
-- Instantiate these tests with parameter generators and type lists.
-- Design new test fixtures reusable across multiple parameter sets.
+- Basic familiarity with writing GoogleTest tests using `TEST` and `TEST_F` macros.
+- Access to GoogleTest and ability to include `<gtest/gtest.h>` in your source files.
+- Understanding of C++ templates and some familiarity with test fixtures.
+
+### What You Will Achieve
+
+- Write tests that run for multiple values or types without duplicating test code.
+- Create parameterized test fixtures for value inputs.
+- Instantiate these tests with flexible parameter generators.
+- Define typed tests to verify behavior over sets of types.
+- Use type-parameterized tests to declare abstract test patterns reusable with various type lists.
 
 ### Estimated Time
-15-30 minutes to read and apply with examples.
+
+Approximately 20-30 minutes to read through and apply the patterns in your tests.
 
 ### Difficulty Level
-Intermediate (basic C++ and testing knowledge needed).
+Intermediate (requires understanding of test fixtures and templates)
 
 ---
 
-## 2. Value-Parameterized Tests
+## 1. Value-Parameterized Tests
 
-Value-parameterized tests let you run the same test logic repeatedly with different data values, maximizing coverage without duplicating test definitions.
+### What Are They?
+Value-parameterized tests allow you to run the same test logic repeatedly over a series of input values. This avoids code duplication and keeps tests concise and maintainable.
 
-### 2.1 Defining a Value-Parameterized Test Fixture
+### How to Write Value-Parameterized Tests
 
-1. Define a test fixture class inheriting from `testing::TestWithParam<T>`, where `T` is the type of test parameter.
-2. Implement your tests using the `TEST_P` macro with this fixture.
-3. Access the current parameter value inside your test body using `GetParam()`.
+#### Step 1: Define a Test Fixture
+
+Create a test fixture class derived from `testing::TestWithParam<T>`, where `T` is the type of your test parameter (any copyable C++ type).
 
 ```cpp
-class FooTest : public testing::TestWithParam<int> { };  // Parameter type: int
+class FooTest : public testing::TestWithParam<int> {
+  // Usual fixture members
+};
+```
 
-TEST_P(FooTest, HandlesPositiveValues) {
-  int param = GetParam();
-  EXPECT_GT(param, 0);
+You can also inherit separately from your base fixture `Test` and `WithParamInterface` if you need a more complex hierarchy:
+
+```cpp
+class BaseTest : public testing::Test { ... };
+class DerivedTest : public BaseTest, public testing::WithParamInterface<int> { ... };
+```
+
+#### Step 2: Define Parameterized Tests
+
+Use the `TEST_P` macro instead of `TEST` or `TEST_F` to define your tests inside the fixture:
+
+```cpp
+TEST_P(FooTest, DoesSomething) {
+  int param = GetParam();  // Access the parameter
+  EXPECT_TRUE(Process(param));
+}
+
+TEST_P(FooTest, HandlesEdgeCase) {
+  // Another test using the same parameter
 }
 ```
 
-### 2.2 Instantiating Parameterized Tests
+> Inside the test body, call `GetParam()` to get the current test parameter value.
 
-Use `INSTANTIATE_TEST_SUITE_P` to supply the parameter values that will drive your tests:
+#### Step 3: Instantiate the Test Suite
+
+Use the `INSTANTIATE_TEST_SUITE_P` macro to supply values for the tests. This macro associates the fixture with one or more parameter values.
+
+```cpp
+INSTANTIATE_TEST_SUITE_P(MyInts, FooTest, testing::Values(1, 2, 3));
+```
+
+The first argument `MyInts` is a unique prefix name for this instantiation.
+
+You can use various parameter generators to flexibly supply parameters:
+
+- `Values(v1, v2, ..., vN)` – explicit values
+- `ValuesIn(container)` – values from STL containers or arrays
+- `Range(begin, end [, step])` – generates a sequence from `begin` up to but not including `end`
+- `Bool()` – generates `{false, true}`
+- `Combine(g1, g2, ..., gN)` – generates all tuples from Cartesian products of generators
+
+For example, to run a test with numbers 0-4:
+
+```cpp
+INSTANTIATE_TEST_SUITE_P(ZeroToFour, FooTest, testing::Range(0, 5));
+```
+
+Or combine two parameters:
 
 ```cpp
 INSTANTIATE_TEST_SUITE_P(
-    PositiveInts,
-    FooTest,
-    testing::Values(1, 2, 10));
+    ComboTest, FooTest,
+    testing::Combine(testing::Values(0, 1), testing::Bool()));
 ```
 
-This generates and runs tests `PositiveInts/FooTest.HandlesPositiveValues/0` (param=1), `/1` (param=2), and `/2` (param=10).
+#### Step 4: (Optional) Customize Parameterized Test Names
 
-### 2.3 Parameter Generators
-
-GoogleTest offers generators to create test parameters:
-
-| Generator          | Description                                                   | Example                                 |
-|--------------------|---------------------------------------------------------------|-----------------------------------------|
-| `Values(...)`      | Explicit list of values.                                      | `Values(1, 2, 3)`                       |
-| `ValuesIn(container)` | Use values from containers or arrays.                      | `ValuesIn(arr)`                         |
-| `Range(start, end, step)` | Numeric range excluding `end`. Defaults to step=1.   | `Range(0, 5, 2)` produces 0, 2, 4      |
-| `Bool()`            | Produces `false` and `true`.                                  | `Bool()`                               |
-| `Combine(g1, g2, ...)` | Cartesian product of generators `g1`, `g2`,...           | `Combine(Bool(), Values(0,1))`         |
-
-Example with container:
-
-```cpp
-const char* kAnimals[] = {"cat", "dog"};
-INSTANTIATE_TEST_SUITE_P(Animals, FooTest, testing::ValuesIn(kAnimals));
-```
-
-### 2.4 Naming Parameterized Tests
-
-You can customize test names by providing a name generator function:
+You can provide a custom function to generate meaningful test name suffixes based on the parameter. This helps identify failing tests in output.
 
 ```cpp
 INSTANTIATE_TEST_SUITE_P(
-    NamedTests,
-    FooTest,
-    testing::Values(10, 20),
-    [](const testing::TestParamInfo<int>& info) {
-        return "Param" + std::to_string(info.param);
-    });
+  NamedTests, FooTest, testing::Values(1, 2, 3),
+  [](const testing::TestParamInfo<FooTest::ParamType>& info) {
+    return "Value" + std::to_string(info.param);
+  });
 ```
 
-### 2.5 Important Tips for Value-Parameterized Tests
+Each instantiated test will then have suffixes like `Value1`, `Value2`, etc.
 
-- The fixture’s `SetUpTestSuite` and `TearDownTestSuite` methods must be **public** for use with `TEST_P`.
-- Define parameterized tests at namespace or global scope, not inside functions.
-- Use `GTEST_ALLOW_UNINSTANTIATED_PARAMETERIZED_TEST(<FixtureName>)` to suppress errors if you define a parameterized test without an instantiation.
+### Best Practices & Tips
+
+- Parameters can be any **copyable** C++ type. If you use pointers, manage their lifecycle carefully.
+- `INSTANTIATE_TEST_SUITE_P` statements must be at global or namespace scope, not inside functions.
+- Use `GTEST_ALLOW_UNINSTANTIATED_PARAMETERIZED_TEST` to suppress errors if you define but do not instantiate a parameterized test suite.
+- Use detailed parameter names in instantiations for better test reports.
+
+### Common Pitfalls
+
+- Forgetting to instantiate your parameterized test suite leads to empty test runs.
+- Supplying parameters that do not convert properly to the parameterized fixture's type causes compilation or runtime errors.
+- Using underscores `_` in test or suite names is discouraged (see FAQ).
 
 ---
 
-## 3. Typed Tests
+## 2. Typed Tests
 
-Typed tests allow you to repeat the same test logic across a fixed list of C++ types, useful when testing multiple implementations or type variants.
+### What Are They?
+Typed tests let you run the same test logic repetitively over a fixed set of types known at compile time. *They are used when behavior depends on the type being tested.*
 
-### 3.1 Defining a Typed Test Fixture
+### How to Write Typed Tests
 
-1. Define a class template fixture derived from `testing::Test`:
+#### Step 1: Define a Fixture Class Template
+
+Define a template fixture class parameterized over a type and derive it from `testing::Test`:
 
 ```cpp
 template <typename T>
 class MyTypedTest : public testing::Test {
  public:
-  T value_ {};
+  // Optionally define static or instance members useful for tests
+  using List = std::list<T>;
+  static T shared_value;
+  T value_;
 };
+
+// Define static member outside
+template <typename T>
+T MyTypedTest<T>::shared_value = T();
 ```
 
-2. Specify the list of types that will be tested:
+#### Step 2: Specify a List of Types
+
+Create a type list using `::testing::Types<...>`
 
 ```cpp
-using MyTypes = testing::Types<int, double, char>;
+using MyTypes = ::testing::Types<char, int, unsigned int>;
+```
+
+#### Step 3: Associate the Fixture with the Type List
+
+Use the `TYPED_TEST_SUITE` macro:
+
+```cpp
 TYPED_TEST_SUITE(MyTypedTest, MyTypes);
 ```
 
-### 3.2 Writing Typed Tests
+#### Step 4: Write Typed Tests
 
-Use `TYPED_TEST` to write tests that run for each type:
+Use the `TYPED_TEST` macro to define tests that will run per type in the list:
 
 ```cpp
-TYPED_TEST(MyTypedTest, DefaultValueIsZero) {
+TYPED_TEST(MyTypedTest, DoesBasicOperations) {
   TypeParam val = this->value_;
-  EXPECT_EQ(val, TypeParam{});
+  val += TestFixture::shared_value;
+  EXPECT_TRUE(DoSomething(val));
+}
+
+TYPED_TEST(MyTypedTest, SupportsList) {
+  typename TestFixture::List values;
+  values.push_back(this->value_);
+  EXPECT_FALSE(values.empty());
 }
 ```
 
-Inside the test, `TypeParam` represents the current type being instantiated.
+- Use `TypeParam` inside tests to refer to the current type.
+- Access fixture members via `this->` or `TestFixture::`.
 
-### 3.3 Instantiating Typed Tests
+### Notes
 
-Typed tests are automatically instantiated for all types listed in `TYPED_TEST_SUITE`.
+- `TYPED_TEST_SUITE` must be declared before test definitions.
+- For a single-type list, you can use `TYPED_TEST_SUITE(Fixture, int);` without `Types<>`.
 
-### 3.4 Custom Type Names
+### Use Cases
 
-You may supply a type name generator class to customize test suite names:
-
-```cpp
-class MyTypeNames {
- public:
-  template <typename T>
-  static std::string GetName(int) {
-    if constexpr (std::is_same_v<T, int>) return "Int";
-    if constexpr (std::is_same_v<T, double>) return "Double";
-    if constexpr (std::is_same_v<T, char>) return "Char";
-    return "Unknown";
-  }
-};
-TYPED_TEST_SUITE(MyTypedTest, MyTypes, MyTypeNames);
-```
+- Verifying multiple template instantiations.
+- Ensuring consistent behavior across similar container types.
 
 ---
 
-## 4. Type-Parameterized Tests
+## 3. Type-Parameterized Tests
 
-Type-parameterized tests are abstract test definitions that can be instantiated with arbitrary type lists, supporting reusable test patterns without knowing the types beforehand.
+### What Are They?
+Type-parameterized tests are similar to typed tests, but the list of types does not need to be known up front. This allows you to define abstract test patterns and instantiate them with different type lists across multiple translation units. This is ideal for verifying interface compliance or reusable test patterns.
 
-### 4.1 Defining a Type-Parameterized Test Suite
+### How to Write Type-Parameterized Tests
 
-1. Define a template fixture class:
+#### Step 1: Define a Fixture Class Template
+
+Same as for typed tests, define your test fixture template:
 
 ```cpp
 template <typename T>
-class MyParamTest : public testing::Test {};
+class MyTypeParamTest : public testing::Test {
+  // ...
+};
 ```
 
-2. Declare it as a type-parameterized test suite with `TYPED_TEST_SUITE_P`:
+#### Step 2: Declare a Type-Parameterized Test Suite
+
+Use the `TYPED_TEST_SUITE_P` macro to declare the test suite template:
 
 ```cpp
-TYPED_TEST_SUITE_P(MyParamTest);
+TYPED_TEST_SUITE_P(MyTypeParamTest);
 ```
 
-3. Define tests using `TYPED_TEST_P`:
+#### Step 3: Define Tests Using `TYPED_TEST_P`
+
+Write the test cases:
 
 ```cpp
-TYPED_TEST_P(MyParamTest, PerformsOperation) {
-  TypeParam val{};
-  // Test logic here
+TYPED_TEST_P(MyTypeParamTest, DoesSomething) {
+  TypeParam val = 0;
+  // test implementation
 }
+
+TYPED_TEST_P(MyTypeParamTest, HasProperty) { ... }
 ```
 
-4. Register your tests with `REGISTER_TYPED_TEST_SUITE_P`:
+#### Step 4: Register the Tests
+
+Register the defined tests' names:
 
 ```cpp
-REGISTER_TYPED_TEST_SUITE_P(MyParamTest, PerformsOperation);
+REGISTER_TYPED_TEST_SUITE_P(MyTypeParamTest, DoesSomething, HasProperty);
 ```
 
-### 4.2 Instantiating Type-Parameterized Tests
+#### Step 5: Instantiate the Test Suite with Types
 
-Use `INSTANTIATE_TYPED_TEST_SUITE_P` to specify the actual types:
+Define the type list and instantiate the tests:
 
 ```cpp
-using MyTypes = testing::Types<int, float>;
-INSTANTIATE_TYPED_TEST_SUITE_P(MyInstances, MyParamTest, MyTypes);
+using MyTypes = ::testing::Types<char, int, unsigned int>;
+INSTANTIATE_TYPED_TEST_SUITE_P(MyInstantiation, MyTypeParamTest, MyTypes);
 ```
+
+> Instantiations can be repeated in multiple files, supporting reusable unit tests.
 
 ---
 
-## 5. Practical Examples
+## 4. Putting It All Together
 
-### 5.1 Value-Parameterized Test Example
+### Example: Value-Parameterized Test
 
 ```cpp
 #include <gtest/gtest.h>
 
 class IsEvenTest : public testing::TestWithParam<int> {};
 
-TEST_P(IsEvenTest, HandlesEvenNumbers) {
-  int n = GetParam();
-  EXPECT_EQ(n % 2, 0) << n << " is not even";
+TEST_P(IsEvenTest, CheckEvenness) {
+  int value = GetParam();
+  EXPECT_EQ(value % 2, 0) << value << " is not even";
 }
 
-INSTANTIATE_TEST_SUITE_P(Examples, IsEvenTest, testing::Values(2, 4, 6, 8));
+INSTANTIATE_TEST_SUITE_P(EvenNumbers, IsEvenTest, testing::Values(2, 4, 6, 8));
 ```
 
-### 5.2 Typed Test Example
+### Example: Typed Test
 
 ```cpp
 #include <gtest/gtest.h>
 
 template <typename T>
-class DefaultValueTest : public testing::Test {
+class ContainerTest : public testing::Test {
  public:
-  T value_{};
+  using ValueType = T;
 };
 
-using MyTypes = testing::Types<int, double, char>;
-TYPED_TEST_SUITE(DefaultValueTest, MyTypes);
+using MyTypes = testing::Types<std::vector<int>, std::list<int>>;
+TYPED_TEST_SUITE(ContainerTest, MyTypes);
 
-TYPED_TEST(DefaultValueTest, IsZeroByDefault) {
-  EXPECT_EQ(this->value_, TypeParam{});
+TYPED_TEST(ContainerTest, DefaultConstructorCreatesEmptyContainer) {
+  TypeParam container;
+  EXPECT_EQ(container.size(), 0);
 }
 ```
 
-### 5.3 Type-Parameterized Test Example
+### Example: Type-Parameterized Test
 
 ```cpp
 #include <gtest/gtest.h>
 
 template <typename T>
-class AbstractFixture : public testing::Test {};
+class NumericTest : public testing::Test {};
 
-TYPED_TEST_SUITE_P(AbstractFixture);
+TYPED_TEST_SUITE_P(NumericTest);
 
-TYPED_TEST_P(AbstractFixture, ExampleTest) {
-  TypeParam val{};
-  EXPECT_EQ(val, TypeParam{});
+TYPED_TEST_P(NumericTest, IsZeroOnDefaultConstruction) {
+  TypeParam n{};
+  EXPECT_EQ(n, 0);
 }
 
-REGISTER_TYPED_TEST_SUITE_P(AbstractFixture, ExampleTest);
+REGISTER_TYPED_TEST_SUITE_P(NumericTest, IsZeroOnDefaultConstruction);
 
-using Types = testing::Types<int, float>;
-INSTANTIATE_TYPED_TEST_SUITE_P(MyInstantiations, AbstractFixture, Types);
+using NumericTypes = ::testing::Types<int, long, short>;
+INSTANTIATE_TYPED_TEST_SUITE_P(MyNumericTests, NumericTest, NumericTypes);
 ```
 
 ---
 
-## 6. Troubleshooting & Tips
+## 5. Troubleshooting and Tips
 
 ### Common Issues
-- **Assertion failures with parameters:** Confirm that parameter values are valid and correctly passed.
-- **Test names clashes:** Ensure unique instantiation names and follow naming conventions.
-- **TestFixture `SetUpTestSuite` visibility:** Must be declared public when used with `TEST_P`.
-- **No tests run in parameterized tests:** Confirm that `INSTANTIATE_TEST_SUITE_P` is called; otherwise, the tests won't execute.
-- **Handler for non-copyable types:** Use custom name generators if default printing doesn't work with complex parameter types.
+
+- **No tests run:** Make sure your parameterized tests are properly instantiated.
+- **Duplicate test names:** When using `INSTANTIATE_TEST_SUITE_P`, the first argument must be unique per test suite to avoid naming collisions.
+- **Parameters not convertible:** Ensure parameters in generators are compatible with your fixture's `ParamType`.
+- **Test names contain illegal characters:** Custom test name generators must only produce alphanumeric or underscore characters.
 
 ### Best Practices
-- Use parameter generators like `Combine` to create comprehensive test scenarios.
-- Keep parameter names meaningful and avoid underscores for test suite and test names.
-- Break down complex tests into multiple parameterized tests for clarity.
-- Use `SCOPED_TRACE` to provide context in complex parameterized tests with loops or subroutine calls.
 
-### Performance Considerations
-- Instantiating too many parameters exponentially increases test runtime; balance test coverage with practical time limits.
-
----
-
-## 7. Next Steps & Related Content
-
-- Explore the [GoogleTest Primer](primer.md) for basics on writing tests and assertions.
-- Learn about [Global Setup and Teardown](advanced.md#global-set-up-and-tear-down) to manage expensive shared resources.
-- Consult the [Testing Reference](reference/testing.md) for detailed descriptions of macros and functions.
-- Advance to [Writing Your First Test](guides/core_testing_workflows/writing_first_test) for entry-level practical projects.
-- For complex scenarios involving types, look into [Typed Tests](advanced.md#typed-tests).
-- For parameter combinations, refer to the `Combine` generator in [Value-Parameterized Tests](advanced.md#value-parameterized-tests).
+- Use `testing::ValuesIn()` to avoid duplication when your parameters already exist in a container.
+- Use `Combine()` to test multiple parameter combinations systematically.
+- Use `ConvertGenerator()` if you need to convert generated parameter types explicitly to your fixture parameter type.
+- Use `GTEST_ALLOW_UNINSTANTIATED_PARAMETERIZED_TEST` if a parameterized test suite will be instantiated dynamically or in other translation units.
+- Mark `SetUpTestSuite()` and `TearDownTestSuite()` as public if your fixture uses `TEST_P`.
+- Prefer to keep your parameterized test fixture simple; complex inheritance can lead to maintenance challenges.
 
 ---
 
-## 8. Diagram: Parameterized Test Flow
+## 6. Next Steps & Resources
+
+- Explore [Value-Parameterized Tests](../advanced.md#value-parameterized-tests) for in-depth guidance.
+- Read about [Typed Tests](../advanced.md#typed-tests) and [Type-Parameterized Tests](../advanced.md#type-parameterized-tests) for variations in type-driven testing.
+- Check out sample test files like [`sample7_unittest.cc`](https://github.com/google/googletest/blob/main/googletest/samples/sample7_unittest.cc) and [`sample8_unittest.cc`](https://github.com/google/googletest/blob/main/googletest/samples/sample8_unittest.cc) for working examples.
+- Use the [Testing Reference](reference/testing.md) for API details on macros and helper functions.
+- Consider customizing test names with lambdas or functors to improve test output readability.
+
+---
+
+## Diagram: Test Instantiation Workflow
 
 ```mermaid
-sequenceDiagram
-  participant User
-  participant TestCode
-  participant GoogleTestFramework
-
-  User->>TestCode: Write Test Fixture (TestWithParam<T>)
-  User->>TestCode: Define TEST_P with GetParam()
-  User->>TestCode: Instantiate tests with INSTANTIATE_TEST_SUITE_P
-
-  GoogleTestFramework->>TestCode: Generate Test Instances per Param
-
-  loop For each parameter
-    GoogleTestFramework->>TestCode: Create Fixture instance
-    TestCode->>TestCode: Run TestBody with Param
-    GoogleTestFramework->>User: Report Result
-  end
-
-  User->>TestCode: Define Typed test classes (template<typename T>)
-  User->>TestCode: Associate Types with TYPED_TEST_SUITE
-  User->>TestCode: Write tests using TYPED_TEST
-
-  loop For each type
-    GoogleTestFramework->>TestCode: Instantiate test for type
-    TestCode->>TestCode: Run Typed TestBody
-    GoogleTestFramework->>User: Report Result
-  end
-
-  User->>TestCode: Define Type-Parameterized tests
-  User->>TestCode: Declare test patterns (TYPED_TEST_SUITE_P)
-  User->>TestCode: Define test patterns (TYPED_TEST_P)
-  User->>TestCode: Register tests (REGISTER_TYPED_TEST_SUITE_P)
-
-  User->>TestCode: Instantiate with INSTANTIATE_TYPED_TEST_SUITE_P
-
-  loop For each type in instantiation
-    GoogleTestFramework->>TestCode: Instantiate test
-    TestCode->>TestCode: Run TestBody
-    GoogleTestFramework->>User: Report Result
-  end
-
+flowchart TD
+  Start([Define parameterized test fixture]) --> DefineTests[Use TEST_P or TYPED_TEST macros]
+  DefineTests --> Instantiate[Instantiate test suite with parameters/types]
+  Instantiate --> GoogleTest[GoogleTest registers individual tests]
+  GoogleTest --> RunTests[Run all instantiated tests]
+  RunTests --> Report[Generate test report with parameter/type info]
+  Report --> End([End])
 ```
 
 ---
+
+<Info>
+For more concrete guidance on parameterized test naming conventions and writing tests, review the [GoogleTest FAQ on test names](../faq.md#why-should-test-suite-names-and-test-names-not-contain-underscore).
+</Info>
+
+<Note>
+The parameter generator expressions are evaluated during test initialization (`InitGoogleTest()`), permitting dynamic determination of test parameters based on runtime state.
+</Note>
